plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '1.1.11'
    id 'org.sonarqube' version '7.4.0.8496'
    id 'jacoco'
}

group = 'com.nefodov'
version = '0.0.1-SNAPSHOT'
description = 'OneLine'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    implementation 'com.bucket4j:bucket4j-core:8.10.1'
    implementation 'com.bucket4j:bucket4j-redis:8.10.1'
    implementation 'io.minio:minio:8.5.12'
    runtimeOnly 'org.postgresql:postgresql'

    implementation 'org.springframework.boot:spring-boot-flyway'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-websocket-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.springframework.boot:spring-boot-resttestclient'
    testImplementation 'org.springframework.boot:spring-boot-restclient'
    testImplementation 'org.testcontainers:junit-jupiter:1.21.4'
    testImplementation 'org.testcontainers:postgresql:1.21.4'
    testImplementation 'org.testcontainers:minio:1.21.4'
    testImplementation 'org.awaitility:awaitility:4.3.0'
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.5.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

jacoco { toolVersion = '0.8.14' }

graalvmNative {
    metadataRepository {
        enabled = true
    }
    binaries {
        named('main') {
            imageName = 'oneline'
        }
    }
}

sonar {
    properties {
        property "sonar.projectKey", "NNc31_OneLine"
        property "sonar.organization", "nnc31"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.sources", "src/main/java,src/main/resources"
        property "sonar.tests", "src/test/java"
        property "sonar.coverage.exclusions", "**/dto/**,**/*.html,**/*.js,**/*.css,**/*.svg,**/*.sql,**/*.properties,**/*.yaml,**/*.yml"
        property "sonar.plsql.file.suffixes", ""
    }
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty 'user.timezone', 'UTC'
    systemProperty 'management.server.port', '0'
    finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.named('test')
    reports {
        xml.required = true
        html.required = false
    }
}


tasks.named('bootRun') {
    systemProperty 'user.timezone', 'UTC'
}
